fix block tabs spacing

--- a/src/sass/global/global.sass
+++ b/src/sass/global/global.sass
@@ -126,7 +126,7 @@ nav.navbar
     display: flex
 
     .tabs 
-        margin: 0 15px 30px 0
+        margin: 0 30px 30px 0
         cursor: pointer
         color: $cWhite
 
