--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -148,7 +148,7 @@ nav.navbar::before {
   display: flex;
 }
 .block-tabs .tabs {
-  margin: 0 15px 30px 0;
+  margin: 0 30px 30px 0;
   cursor: pointer;
   color: #FFFFFF;
 }
